WIP: DX Film Edge
WIP DX Film Edge

clean code

WIP DX Film Edge

library tests

WIP dx edge

DX Edge: add error codes

better logging

code cleaning

remove compiler warnings

str copy fixes and code cleaning

more tests

correct dimensions

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -10,7 +10,7 @@ if(ZINT_USE_PNG)
 endif()
 
 set(zint_COMMON_SRCS common.c library.c large.c reedsol.c gs1.c eci.c filemem.c general_field.c)
-set(zint_ONEDIM_SRCS bc412.c code.c code128.c 2of5.c upcean.c telepen.c medical.c plessey.c rss.c)
+set(zint_ONEDIM_SRCS bc412.c code.c code128.c 2of5.c upcean.c telepen.c medical.c plessey.c rss.c dxfilmedge.c)
 set(zint_POSTAL_SRCS postal.c auspost.c imail.c mailmark.c)
 set(zint_TWODIM_SRCS code16k.c codablock.c dmatrix.c pdf417.c qr.c maxicode.c composite.c aztec.c code49.c code1.c gridmtx.c hanxin.c dotcode.c ultra.c)
 if(ZINT_USE_PNG AND PNG_FOUND)
