--- a/backend/tests/CMakeLists.txt
+++ b/backend/tests/CMakeLists.txt
@@ -56,6 +56,7 @@ zint_add_test(common test_common)
 zint_add_test(composite test_composite)
 zint_add_test(dmatrix test_dmatrix)
 zint_add_test(dotcode test_dotcode)
+zint_add_test(dxfilmedge test_dxfilmedge)
 zint_add_test(eci test_eci)
 zint_add_test(emf test_emf)
 zint_add_test(filemem test_filemem)
