--- a/win32/vs2015/libzint.vcxproj
+++ b/win32/vs2015/libzint.vcxproj
@@ -314,6 +314,7 @@
     </ClCompile>
     <ClCompile Include="..\..\backend\dmatrix.c" />
     <ClCompile Include="..\..\backend\dotcode.c" />
+    <ClCompile Include="..\..\backend\dxfilmedge.c" />
     <ClCompile Include="..\..\backend\eci.c" />
     <ClCompile Include="..\..\backend\emf.c" />
     <ClCompile Include="..\..\backend\filemem.c" />
